# quone-lang

./: .gitignore  README.md  netlify.toml  quone.cabal
app/: LSP.hs  Main.hs
dist-newstyle/cache/: config
editors/cursor/quone-lang/: extension.js  language-configuration.json  package-lock.json  package.json
editors/cursor/quone-lang/syntaxes/: tl.tmLanguage.json
examples/: dataframe.Q  dataframe.R  dplyr.Q  dplyr.R  normalize.Q  normalize.R  option.Q  option.R  records.Q  records.R  rmse.Q  rmse.R
r-package/: DESCRIPTION  LICENSE  NAMESPACE  README.md
r-package/R/: bin.R  check.R  compile.R  format.R  install.R  repl.R  source.R
src/: Quone.hs
src/Quone/: Dict.hs  Format.hs  List.hs  Maybe.hs  Prelude.hs  Result.hs  Set.hs  String.hs
src/Quone/AST/: Source.hs
src/Quone/Generate/: R.hs
src/Quone/Parse/: Lexer.hs  Parser.hs  Token.hs
src/Quone/Type/: Infer.hs  Type.hs
website/: README.md  index.html  main.js  package-lock.json  package.json
website/src/: Main.elm
